--- a/css/style3.css
+++ b/css/style3.css
@@ -76,7 +76,7 @@ h1,h2,h3,h4,h5,h6 {
 .menu-nav-link:hover{
     opacity: 0.7;
 }
-.menu-nav{
+.menu-nav {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,7 +85,7 @@ h1,h2,h3,h4,h5,h6 {
     padding-bottom: 32px;
     list-style-type: none;
     display: flex;
-    font-size: 13.5px;
+    font-size: 11px;
 
     margin-top:15px;
 }
@@ -94,9 +94,8 @@ h1,h2,h3,h4,h5,h6 {
     align-content: center;
 }
 .one-nav ,.two-nav {
-    min-width: 112px;
     width: auto;
-    padding: 0 12px;
+    padding: 0 4px;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -487,4 +486,8 @@ main{
     .copylight {
         font-size: 14px;
     }
+}
+@media(min-width:768px){
+    .menu-nav { font-size: 13.5px; }
+    .one-nav, .two-nav { min-width: 112px; padding: 0 12px; }
 }
